--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,68 @@ body {
 a {
     text-decoration: none;
 }
+
 ul, li {
-    list-style:none;
+    list-style: none;
 }
 
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+h1, h2, h3, p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+img {
+    display: block;
+}
+
+.container {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
 
 /*header*/
+
+.header-page {
+    display: flex;
+    height: 72px;
+
+}
+.header-container {
+    display: flex;
+    flex-shrink: 0;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid var(--cornflower, #E7E9FC);
+    background:#FFF;
+
+}
+
+.nav-container {
+    display: flex;
+    margin-right: auto;
+    align-items: center;
+}
+
+.list-container {
+    display: flex;
+    align-items: center;
+    column-gap: 40px;
+
+}
+
+.address-container {
+    display: flex;
+    column-gap: 40px;
+
+}
+
 
 .logo {
     color: #4D5AE5;
@@ -25,17 +81,17 @@ ul, li {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-style: normal;
     text-transform: uppercase;
+    padding: 24px 0;
+    display: inline-block;
+    align-items: center;
+    margin-right: 76px;
+
+
 
 }
 .logo-studio {
     color: #2E2F42;
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.16;
-    letter-spacing: 0.54px;
-    font-style: normal;
-    text-transform: uppercase;
+
 }
 
 
@@ -47,6 +103,9 @@ ul, li {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 24px 0;
+    display: inline-flex;
+    align-items: center;
 }
 .link:hover,
 .link:focus {
@@ -56,6 +115,7 @@ ul, li {
 
 .address {
     font-style: normal;
+    gap: 40px;
 }
 
 .address-list{
@@ -66,6 +126,11 @@ ul, li {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    display: inline-flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 24px 0;
+    
 }
 
 .address-list:hover,
@@ -77,6 +142,8 @@ ul, li {
 
 .hero-section {
     background-color: #2E2F42;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 .hero-title {
@@ -88,7 +155,13 @@ ul, li {
     font-weight: 700;
     line-height: 1.07;
     letter-spacing: 1.12px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 496px;
+    padding-bottom: 48px;
+
 }
+
 
 .button {
     background-color: #4D5AE5;
@@ -97,7 +170,16 @@ ul, li {
     font-weight: 500;
     line-height: 1.5;
     cursor: pointer;
-    letter-spacing: 0.04em
+    letter-spacing: 0.04em;
+    display: block;
+    padding: 16px 32px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 4px;
+    border:none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .button:hover, .button:focus {
@@ -107,6 +189,34 @@ ul, li {
 
 /*Our skills*/
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white—space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.skills {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.skills-list {
+    display: flex;
+    column-gap: 24px;
+}
+.skills-item {
+    width: calc((100% - 72px) / 4); 
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .skills-title {
     color: #2E2F42;
     font-family: Roboto;
@@ -115,6 +225,7 @@ ul, li {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.4px;
+    padding-bottom: 8px;
 }
 
 .skills-text {
@@ -129,6 +240,8 @@ ul, li {
 
 .team-section {
     background-color: #F4F4FD;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .team-title {
@@ -141,10 +254,28 @@ ul, li {
     line-height: 1.11;
     letter-spacing: 0.72px;
     text-transform: capitalize;
+    padding-bottom: 72px;
 }
 
-.team-pic {
+.team-list {
+    display: flex;
+}
+
+
+.team-item {
+    margin-right: 24px;
+    display: inline-flex;
+    width: calc((100% - 72px) / 4);
     background-color: #FFFFFF;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.team-container {
+    padding: 32px 0;
 }
 
 .team-subtitle {
@@ -156,6 +287,7 @@ ul, li {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.4px;
+    margin-bottom: 8px;
 }
 
 .team-text {
@@ -169,6 +301,11 @@ ul, li {
 
 /*Our Portfolio*/
 
+.portfolio-section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 .portfolio-title {
     color: #2E2F42;
     text-align: center;
@@ -177,8 +314,33 @@ ul, li {
     font-style: normal;
     font-weight: 700;
     line-height: 1.11;
-    letter-spacing: 0.72px;
+    letter-spacing: 0.02em;
     text-transform: capitalize;
+    padding-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-item {
+    width: calc((100% - 48px) / 3);
+    flex-direction: column;
+    align-items: flex-start;
+    flex-shrink: 0;
+    justify-content: center;
+    align-self: stretch;
+
+}
+
+.portfolio-container {
+    padding: 32px 16px;
+    border: 1px solid var(--cornflower, #E7E9FC);
+    background: var(--white, #FFF);
+    border-top: none;
 }
 
 .portfolio-subtitle {
@@ -189,6 +351,7 @@ ul, li {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.4px;
+    margin-bottom: 8px;
 }
 
 .portfolio-text {
@@ -204,6 +367,8 @@ ul, li {
 
 .footer-section {
     background-color: #2E2F42;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .logo-footer {
@@ -215,22 +380,19 @@ ul, li {
     line-height: 1.17;
     letter-spacing: 0.54px;
     text-transform: uppercase;
+    display: inline-block;
+    padding-bottom: 16px;
 }
 
 .logo-foter-studio {
     color: #F4F4FD;
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.16;
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
 }
+
 .footer-text {
     color:  #F4F4FD;
     font-family: Roboto;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.32px;
+    width: 264px;
 }
