--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ img {
     margin-right: auto;
     margin-left: auto;
     max-width: 496px;
-    padding-bottom: 48px;
+    margin-bottom: 48px;
 
 }
 
@@ -269,12 +269,8 @@ img {
 
 
 .team-item {
-    display: inline-flex;
     width: calc((100% - 72px) / 4);
     background-color: #FFFFFF;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
